syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (Order) {}
  rpc GetOrder (GetOrderRequest) returns (Order) {}
  rpc GetUserOrder(GetUserOrderRequest) returns (OrderList) {}
  rpc GetAllOrders (Empty) returns (OrderList) {}
  rpc TestConnection (Message) returns (Message) {}
}

message CreateOrderRequest {
  string userId = 1;
  repeated OrderItemRequest orderItems = 2;
}

message GetUserOrderRequest {
  string userId = 1;
}

message OrderItemRequest {
  string productId = 1;
  int32 quantity = 2;
  float price = 3;
}

message GetOrderRequest {
  string id = 1;
}

message OrderItem {
  string id = 1;
  string orderId = 2;
  string productId = 3;
  int32 quantity = 4;
  double price = 5;
}

message Order {
  string id = 1;
  string userId = 2;
  string status = 3;
  double totalAmount = 4;
  repeated OrderItem orderItems = 6;
}

message OrderList {
  repeated Order orders = 1;
}

message Empty {}

message Message {
  string message = 1;
}

enum OrderStatus {
  PENDING = 0;
  PAID = 1;
}